# Assistente-Virtual

./: README.md
virtual-assistant/: pyproject.toml  requirements.txt
virtual-assistant/scripts/: run_assistant.py
virtual-assistant/src/assistant/: __init__.py  config.py
virtual-assistant/src/assistant/nlg/: response_generator.py
virtual-assistant/src/assistant/nlu/: __init__.py  intent_parser.py
virtual-assistant/src/assistant/skills/: __init__.py  example_skill.py
virtual-assistant/src/assistant/stt/: __init__.py  stt_engine.py
virtual-assistant/src/assistant/tts/: __init__.py  tts_engine.py
